--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "week7a",
+  "name": "csc3916_hw2",
   "version": "1.0.0",
-  "description": "week7a",
+  "description": "Web API 3916 Homework 2",
   "main": "server.js",
   "scripts": {
     "test": "mocha --timeout 10000 --exit"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shawnmccarthy/CSC3916_HW2.git"
+  },
+  "keywords": [
+    "Movie"
+  ],
   "author": "Shawn McCarthy",
-  "license": "ISC",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/shawnmccarthy/CSC3916_HW2/issues"
+  },
+  "homepage": "https://github.com/shawnmccarthy/CSC3916_HW2#readme",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.19.2",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
-    "express": "^4.17.3",
-    "jsonwebtoken": "^8.1.1",
-    "mongodb": "^4.4.1",
-    "mongoose": "^5.13.14",
-    "passport": "^0.4.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.6.0",
+    "express": "^4.17.1",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
     "passport-http": "^0.3.0",
-    "passport-jwt": "^3.0.1"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.0",
-    
-    "mocha": "^5.2.0",
-    "sinon": "^7.2.2",
-    "sinon-mongoose": "^2.2.1"
+    "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.3.0"
   }
 }
